--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "test:e2e": "vitest run --config ./vitest-e2e.config.ts"
   },
   "dependencies": {
+    "@fastify/formbody": "^8.0.2",
     "@fastify/secure-session": "^8.3.0",
     "@fastify/static": "^9.0.0",
     "@nestjs/cache-manager": "^3.1.0",
