--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,7 +20,9 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@qs-pro/eslint-config": "workspace:^",
     "@types/node": "^22.10.7",
+    "eslint": "^9.39.2",
     "typescript": "^5.9.3"
   }
 }
