chow(project): update build tooling, eslint configs, and dependencies

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,20 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@qs-pro/shared-types": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-tooltip": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@solar-icons/react": "^1.0.1",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
+    "monaco-editor": "^0.52.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,22 +30,24 @@
   },
   "devDependencies": {
     "@qs-pro/eslint-config": "workspace:*",
+    "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
-    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22.10.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.2",
+    "globals": "^16.0.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.0.0",
     "vite": "^5.1.6",
     "vitest": "^3.0.0"
   }
