--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,19 +7,20 @@
     "access": "public"
   },
   "peerDependencies": {
-    "eslint": "^8.56.0 || ^9.0.0",
+    "eslint": "^9.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@eslint/js": "^9.0.0",
+    "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-security": "^3.0.0",
-    "prettier": "^3.0.0"
+    "globals": "^16.0.0",
+    "prettier": "^3.0.0",
+    "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^9.0.0",
     "typescript": "^5.3.3"
   }
 }
