--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
+    "fuse.js": "^7.1.0",
     "monaco-editor": "^0.52.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
@@ -33,6 +34,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.10.7",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
