--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,21 +23,26 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/secure-session": "^8.3.0",
     "@fastify/static": "^9.0.0",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
+    "@qs-pro/backend-shared": "workspace:^",
     "@qs-pro/database": "workspace:^",
     "@qs-pro/shared-types": "workspace:^",
     "axios": "^1.6.7",
+    "bullmq": "^5.66.4",
     "cache-manager": "^7.2.7",
     "dotenv": "^16.4.5",
     "fastify": "^5.6.2",
+    "ioredis": "^5.9.0",
     "jose": "^6.1.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -49,6 +54,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "drizzle-orm": "^0.45.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
