--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"src/**/*.ts\" --fix"
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "test": "vitest"
   },
   "dependencies": {
     "zod": "^3.22.4"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@qs-pro/eslint-config": "workspace:^",
     "eslint": "^9.39.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^3.2.4"
   }
 }
