feat(web): add feature flag hooks and gated UI components
Implemented useFeature and useTenantFeatures hooks. Added FeatureGate and LockedOverlay components for tier-based access control. Integrated flags into AppShell and API client.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,14 @@
     "@monaco-editor/react": "^4.6.0",
     "@qs-pro/shared-types": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@solar-icons/react": "^1.0.1",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.24.12",
     "fuse.js": "^7.1.0",
     "monaco-editor": "^0.52.0",
     "next-themes": "^0.4.6",
