--- a/agent-os/config.yml
+++ b/agent-os/config.yml
@@ -1,5 +1,5 @@
 version: 2.1.1
-last_compiled: 2026-01-02 23:06:01
+last_compiled: 2026-01-09 08:12:14
 
 # ================================================
 # Compiled with the following settings:
@@ -7,7 +7,7 @@ last_compiled: 2026-01-02 23:06:01
 # To change these settings, run ~/agent-os/scripts/project-update.sh to re-compile your project with the new settings.
 # ================================================
 profile: default
-claude_code_commands: false
-use_claude_code_subagents: false
-agent_os_commands: true
-standards_as_claude_code_skills: false
+claude_code_commands: true
+use_claude_code_subagents: true
+agent_os_commands: false
+standards_as_claude_code_skills: true
