feat(web): add system data views and enhance services/UI components
Add system data views support and improve services and UI components
for feature gating and premium tier functionality.

- Add system-data-views.ts with static MCE data view definitions
- Update metadata service with improved type definitions
- Enhance FeatureGate component with tier-based access control
- Update locked-overlay and premium-badge UI components
- Improve api.ts and auth.ts service implementations
- Update tailwind config and package dependencies

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:preview": "vite --mode preview",
     "build": "tsc && vite build",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 50",
     "typecheck": "tsc --noEmit",
