--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "fuse.js": "^7.1.0",
     "monaco-editor": "^0.52.0",
     "next-themes": "^0.4.6",
+    "node-sql-parser": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sonner": "^2.0.7",
