--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,4 +61,8 @@ jobs:
       - name: Run migrations
         run: pnpm db:migrate
 
-      - run: pnpm test
+      - name: Unit & integration tests
+        run: pnpm test
+
+      - name: E2E tests
+        run: pnpm test:e2e
