--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "tunnel:dev": "concurrently \"pnpm dev\" \"cloudflared tunnel run queryplusplus-dev\"",
     "pretest": "pnpm -r --filter \"./packages/**\" build",
     "test": "pnpm -r test",
+    "test:e2e": "pnpm -r test:e2e",
     "lint": "pnpm -r lint",
     "pretypecheck": "pnpm -r --filter \"./packages/**\" build",
     "typecheck": "pnpm -r typecheck",
     "db:generate": "pnpm --filter @qs-pro/database db:generate",
-    "db:migrate": "pnpm --filter @qs-pro/database db:migrate"
+    "db:migrate": "pnpm --filter @qs-pro/database db:migrate",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "packageManager": "pnpm@9.0.0",
   "devDependencies": {
     "concurrently": "^9.2.1",
     "dotenv": "^16.4.5",
-    "esbuild": "0.25.12"
+    "esbuild": "0.25.12",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7"
   }
 }
