--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -59,6 +59,8 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "msw": "^2.12.7",
