--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -46,6 +46,10 @@
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "eslint": "^9.39.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "jsdom": "^27.4.0",
     "msw": "^2.12.7",
@@ -54,7 +58,7 @@
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
-    "typescript-eslint": "^8.0.0",
+    "typescript-eslint": "^8.51.0",
     "vite": "^5.1.6",
     "vitest": "^3.0.0"
   }
