--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript": "^5.3.3"
   }
 }
