--- a/packages/backend-shared/package.json
+++ b/packages/backend-shared/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint \"src/**/*.ts\" --fix"
+    "lint": "eslint \"src/**/*.ts\" --fix",
+    "test": "vitest run"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.1.0",
