refactor(api): MCE API consolidation - SOAP builders, REST SDK, service consolidation (#11)
* refactor(backend-shared): enhance SOAP request builders

- Add ParentFolder.ID and Description to DataFolder builder
- Add IsPrimaryKey and IsRequired to DataExtensionField builder
- Create explicit buildRetrieveDataExtensionFieldsByCustomerKey/ByName
- Refactor buildRetrieveDataExtensionFields to discriminated union
- Update DataExtensionService.retrieveFields to use new API

* feat(backend-shared): add REST SDK layer with RestDataService

- Create request builders for rowset and automation endpoints
- Add TypeScript interfaces for REST API responses
- Implement RestDataService wrapping MceBridgeService
- Export builders and types from package index

* refactor(backend-shared): use SOAP builders in MetadataService

Replace inline SOAP XML construction with centralized builders:
- fetchFolders uses buildRetrieveDataFolder and buildContinueRequest
- fetchDataExtensions uses buildRetrieveDataExtensions
- getFields uses buildRetrieveDataExtensionFields

* refactor(api): consolidate MetadataService into backend-shared

- Delete duplicate MetadataService from apps/api
- Update MetadataController to import from @qs-pro/backend-shared
- Import SharedMceModule in API's MceModule
- Export MetadataService from backend-shared package index

* refactor: use RestDataService for MCE REST API calls

- API ShellQueryService uses RestDataService.getRowset for results
- Worker ShellQueryProcessor uses RestDataService for:
  - checkRowsetReady (getRowset)
  - probeRowsetHasAnyRows (getRowset)
  - checkIsRunningWithFallback (checkIsRunning)
- Remove inline REST URL construction and encodeURIComponent calls

* fix(backend-shared): remove duplicate controller causing route conflict

Library modules should export services, not controllers.
- Remove MetadataController from MceModule (was duplicating API's controller)
- Delete metadata.controller.ts and its spec from backend-shared
- Controllers be

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "tunnel:dev": "concurrently \"pnpm dev\" \"cloudflared tunnel run queryplusplus-dev\"",
     "pretest": "pnpm -r --filter \"./packages/**\" build",
     "test": "pnpm -r test",
+    "test:api": "pnpm -r --filter \"./packages/**\" build && pnpm --filter api test",
+    "test:web": "pnpm -r --filter \"./packages/**\" build && pnpm --filter @qs-pro/web test",
+    "test:worker": "pnpm -r --filter \"./packages/**\" build && pnpm --filter worker test",
     "test:e2e": "pnpm -r test:e2e",
     "lint": "pnpm -r lint",
     "pretypecheck": "pnpm -r --filter \"./packages/**\" build",
