refactor: rename package scope from @qs-pro to @qpp
Rename all workspace packages from @qs-pro/* to @qpp/* for a shorter,
cleaner import path. This is a cosmetic change with no functional impact.

Changes:
- @qs-pro/backend-shared → @qpp/backend-shared
- @qs-pro/database → @qpp/database
- @qs-pro/shared-types → @qpp/shared-types
- @qs-pro/eslint-config → @qpp/eslint-config
- @qs-pro/web → @qpp/web
- @qs-pro/mce-seed → @qpp/mce-seed
- Update all package.json dependencies
- Update all TypeScript imports
- Update root package.json scripts and lint-staged config

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,9 +30,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
-    "@qs-pro/backend-shared": "workspace:^",
-    "@qs-pro/database": "workspace:^",
-    "@qs-pro/shared-types": "workspace:^",
+    "@qpp/backend-shared": "workspace:^",
+    "@qpp/database": "workspace:^",
+    "@qpp/shared-types": "workspace:^",
     "axios": "^1.6.7",
     "bullmq": "^5.66.4",
     "cache-manager": "^7.2.7",
