--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -24,9 +24,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/schedule": "^6.1.0",
-    "@qs-pro/backend-shared": "workspace:^",
-    "@qs-pro/database": "workspace:^",
-    "@qs-pro/shared-types": "workspace:^",
+    "@qpp/backend-shared": "workspace:^",
+    "@qpp/database": "workspace:^",
+    "@qpp/shared-types": "workspace:^",
     "bullmq": "^5.66.4",
     "dotenv": "^16.4.5",
     "fastify": "^5.6.2",
@@ -40,7 +40,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
-    "@qs-pro/eslint-config": "workspace:^",
+    "@qpp/eslint-config": "workspace:^",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.39.2",
