--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qs-pro/eslint-config",
+  "name": "@qpp/eslint-config",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
