--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qs-pro/shared-types",
+  "name": "@qpp/shared-types",
   "version": "0.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,7 +16,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@qs-pro/eslint-config": "workspace:^",
+    "@qpp/eslint-config": "workspace:^",
     "eslint": "^9.39.2",
     "typescript": "^5.3.3",
     "vitest": "^3.2.4"
