refactor: rename package scope from @qs-pro to @qpp
Rename all internal package references from @qs-pro/* to @qpp/* for
shorter imports and consistency with the product name "Query++".

Changes:
- Update all package.json names and dependencies
- Update all TypeScript imports
- Update ESLint config requires
- Update documentation references

--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
     "worker:dev": "lsof -i :3001 -t | xargs kill -9 2>/dev/null || true && pnpm --filter worker start:dev",
     "dev:preview": "pnpm run web:dev:preview",
     "api:dev": "lsof -i :3000 -t | xargs kill -9 2>/dev/null || true && pnpm --filter api start:dev",
-    "web:dev": "pnpm --filter @qs-pro/web dev",
-    "web:dev:preview": "pnpm --filter @qs-pro/web dev:preview",
+    "web:dev": "pnpm --filter @qpp/web dev",
+    "web:dev:preview": "pnpm --filter @qpp/web dev:preview",
     "tunnel:dev": "concurrently \"pnpm dev\" \"cloudflared tunnel run queryplusplus-dev\"",
     "pretest": "pnpm -r --filter \"./packages/**\" build",
     "test": "pnpm -r test",
     "test:api": "pnpm -r --filter \"./packages/**\" build && pnpm --filter api test",
-    "test:web": "pnpm -r --filter \"./packages/**\" build && pnpm --filter @qs-pro/web test",
+    "test:web": "pnpm -r --filter \"./packages/**\" build && pnpm --filter @qpp/web test",
     "test:worker": "pnpm -r --filter \"./packages/**\" build && pnpm --filter worker test",
     "test:e2e": "pnpm -r test:e2e",
     "lint": "pnpm -r lint",
     "pretypecheck": "pnpm -r --filter \"./packages/**\" build",
     "typecheck": "pnpm -r typecheck",
-    "db:generate": "pnpm --filter @qs-pro/database db:generate",
-    "db:migrate": "pnpm --filter @qs-pro/database db:migrate",
+    "db:generate": "pnpm --filter @qpp/database db:generate",
+    "db:migrate": "pnpm --filter @qpp/database db:migrate",
     "prepare": "husky"
   },
   "lint-staged": {
     "apps/api/**/*.ts": "pnpm --filter api exec eslint --fix",
-    "apps/web/**/*.{ts,tsx}": "pnpm --filter @qs-pro/web exec eslint --fix",
-    "packages/backend-shared/**/*.ts": "pnpm --filter @qs-pro/backend-shared exec eslint --fix",
-    "packages/database/**/*.ts": "pnpm --filter @qs-pro/database exec eslint --fix",
-    "packages/shared-types/**/*.ts": "pnpm --filter @qs-pro/shared-types exec eslint --fix"
+    "apps/web/**/*.{ts,tsx}": "pnpm --filter @qpp/web exec eslint --fix",
+    "packages/backend-shared/**/*.ts": "pnpm --filter @qpp/backend-shared exec eslint --fix",
+    "packages/database/**/*.ts": "pnpm --filter @qpp/database exec eslint --fix",
+    "packages/shared-types/**/*.ts": "pnpm --filter @qpp/shared-types exec eslint --fix"
   },
   "packageManager": "pnpm@9.0.0",
   "devDependencies": {
