--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -16,6 +16,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@qpp/shared-types": "workspace:^",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
