--- a/packages/backend-shared/package.json
+++ b/packages/backend-shared/package.json
@@ -24,6 +24,9 @@
     "drizzle-orm": "^0.45.1",
     "fastify": "^5.6.2",
     "jose": "^6.1.3",
+    "nestjs-pino": "^4.5.0",
+    "pino": "^10.2.1",
+    "pino-http": "^11.0.0",
     "postgres": "^3.4.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -34,6 +37,7 @@
     "@qpp/eslint-config": "workspace:^",
     "@types/node": "^22.10.7",
     "eslint": "^9.18.0",
+    "pino-pretty": "^13.1.3",
     "typescript": "^5.7.3",
     "unplugin-swc": "^1.5.9",
     "vitest": "^3.0.0"
