--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "fastify": "^5.6.2",
     "ioredis": "^5.9.0",
     "jose": "^6.1.3",
+    "nestjs-pino": "^4.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4"
