--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.6.2",
     "ioredis": "^5.9.0",
+    "nestjs-pino": "^4.5.0",
     "node-sql-parser": "^5.4.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
