feat(01.3-02): add root Vitest config with projects pattern
- Create vitest.shared.ts with common base configuration
- Create vitest.config.ts referencing workspace configs
- Add vitest ^3.0.0 to root devDependencies
- Enable pnpm vitest from root with --project filtering

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.5",
     "esbuild": "0.25.12",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.7"
+    "lint-staged": "^16.2.7",
+    "vitest": "^3.0.0"
   }
 }
