refactor: test infrastructure cleanup (Phase 01.3) (#23)
* feat(01.3-01): create @qpp/test-utils package infrastructure

- Add package.json with vitest peer dependency and workspace links
- Add tsconfig.json with NodeNext module resolution
- Add src/index.ts exporting factories, stubs, setup
- Add setup/reset.ts with counter management for test isolation

* feat(01.3-01): consolidate test factories and stubs into @qpp/test-utils

Factories (9):
- createMockUserSession, createMockShellQueryContext, createMockShellQueryRun
- DEFAULT_SQL_TEXT, DEFAULT_ENCRYPTED_SQL_TEXT
- createMockJob, createMockBullJob, createMockPollJobData, createMockPollBullJob

Stubs (17):
- Database: createDbStub (merged with .limit() chain support)
- Redis: createRedisStub (merged with get/set and duplicate)
- MCE: createMceBridgeStub, createRestDataServiceStub, createAsyncStatusServiceStub,
  createDataFolderServiceStub, createDataExtensionServiceStub, createQueryDefinitionServiceStub
- Services: createRlsContextStub (with runWithUserContext), createQueueStub,
  createShellQueryServiceStub, createShellQueryRunRepoStub, createShellQuerySseServiceStub,
  createEncryptionServiceStub, createMetricsStub, createTenantRepoStub
- NestJS: createSessionGuardMock

* feat(01.3-02): add root Vitest config with projects pattern

- Create vitest.shared.ts with common base configuration
- Create vitest.config.ts referencing workspace configs
- Add vitest ^3.0.0 to root devDependencies
- Enable pnpm vitest from root with --project filtering

* refactor(01.3-02): update per-package Vitest configs to use shared base

- All configs extend vitest.shared.ts via mergeConfig
- Add project names (api, web, worker, backend-shared, database, shared-types)
- Support both .spec.ts and .test.ts patterns during transition
- Preserve package-specific settings (aliases, plugins, env vars)

* refactor(01.3-03): rename backend test files to new naming convention

- Unit tests (src/): .spec.ts -> .unit.test.ts (29 files)
- Integ

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,7 +17,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
-    "test:e2e": "vitest run --config ./vitest-e2e.config.ts"
+    "test:e2e": "vitest run --config ./vitest-e2e.config.ts",
+    "test:integration": "vitest run --config ./vitest-integration.config.ts"
   },
   "dependencies": {
     "@fastify/formbody": "^8.0.2",
@@ -46,6 +47,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@qpp/test-utils": "workspace:^",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
