--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,6 +21,7 @@
     "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
+    "@vitest/eslint-plugin": "^1.6.6",
     "eslint": "^9.0.0",
     "typescript": "^5.3.3"
   }
