--- a/packages/backend-shared/package.json
+++ b/packages/backend-shared/package.json
@@ -10,7 +10,8 @@
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\" --fix",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:integration": "vitest run --config ./vitest-integration.config.ts"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.1.0",
@@ -37,6 +38,7 @@
     "@qpp/eslint-config": "workspace:^",
     "@types/node": "^22.10.7",
     "eslint": "^9.18.0",
+    "msw": "^2.12.7",
     "pino-pretty": "^13.1.3",
     "typescript": "^5.7.3",
     "unplugin-swc": "^1.5.9",
