--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -39,14 +39,16 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@qpp/test-utils": "workspace:^",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@qpp/eslint-config": "workspace:^",
+    "@qpp/test-utils": "workspace:^",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.39.2",
+    "msw": "^2.12.7",
+    "postgres": "^3.4.3",
     "supertest": "^7.0.0",
     "typescript": "^5.9.3",
     "unplugin-swc": "^1.5.9",
