fix(database): grant BYPASSRLS to qs_migrate for test cleanup
The qs_migrate user needs BYPASSRLS to clean up test data across all
tenants, since tables use FORCE ROW LEVEL SECURITY. Without this,
integration test cleanup fails silently due to RLS filtering.

Changes:
- CI workflow: add BYPASSRLS when creating qs_migrate role
- Docker init: add BYPASSRLS when creating qs_migrate role
- Auth integration test: use DATABASE_URL_MIGRATIONS (fail fast if unset)
  instead of hardcoded postgres credentials

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Create database roles
         run: |
           psql "$POSTGRES_URL" <<'SQL'
-          CREATE ROLE qs_migrate LOGIN PASSWORD 'migrate_pass';
+          CREATE ROLE qs_migrate LOGIN PASSWORD 'migrate_pass' BYPASSRLS;
           CREATE ROLE qs_runtime LOGIN PASSWORD 'runtime_pass';
 
           GRANT CONNECT ON DATABASE qs_pro_test TO qs_migrate;
