docs: add BYPASSRLS security warnings to role configuration
Clarify that qs_migrate has BYPASSRLS and must only be used for
migrations and test cleanup, never for application runtime.

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ POSTGRES_PASSWORD=change_me_dev_only
 POSTGRES_DB=qs_pro
 
 # Postgres app roles (created on first `docker compose up` via docker/postgres/init/)
+# IMPORTANT: qs_migrate has BYPASSRLS and is intended ONLY for schema migrations and test/CI cleanup.
+# Application runtime must use qs_runtime (non-BYPASSRLS) for DATABASE_URL.
 QS_DB_MIGRATE_USER=qs_migrate
 QS_DB_MIGRATE_PASSWORD=change_me_dev_only
 QS_DB_RUNTIME_USER=qs_runtime
