fix(shared): improve DE validation and fix MetadataService test
- Add DataExtensionService stub to MetadataService unit test
- Relax retention date validation from "tomorrow" to "today or later"
- Add real calendar date validation (reject invalid dates like 2026-02-30)
- Normalize date validation to UTC for consistent behavior
- Add case-insensitive field name uniqueness validation

--- a/packages/backend-shared/package.json
+++ b/packages/backend-shared/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@nestjs/testing": "^11.0.1",
     "@qpp/eslint-config": "workspace:^",
+    "@qpp/test-utils": "workspace:^",
     "@types/node": "^22.10.7",
     "eslint": "^9.18.0",
     "msw": "^2.12.7",
