chore: update gitignore and mcp config
- Add root-level PNG exclusion pattern to .gitignore
- Update MCP server configuration

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ logs/
 .DS_Store
 Thumbs.db
 
+# Screenshots (root level only - use .screenshots/ for tracked ones)
+/*.png
+
 # IDEs
 .vscode/
 !.vscode/extensions.json
