feat(packages): consolidate schema inferrer into shared package
Create @qpp/schema-inferrer package to eliminate ~1500 lines of
duplicated code between worker and frontend schema inference.

- Add unified types with Result pattern for error handling
- Port system data views (29 MCE data views with field definitions)
- Port function type maps and SQL utilities
- Implement core schema inferrer with metadata lookup
- Migrate worker to thin wrapper (~94% code reduction)
- Migrate frontend to thin wrapper with adapter functions
- Add comprehensive test suite (172 tests)

--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -27,6 +27,7 @@
     "@nestjs/schedule": "^6.1.0",
     "@qpp/backend-shared": "workspace:^",
     "@qpp/database": "workspace:^",
+    "@qpp/schema-inferrer": "workspace:^",
     "@qpp/shared-types": "workspace:^",
     "bullmq": "^5.66.4",
     "dotenv": "^16.4.5",
