fix(schema-inferrer): use tsup for dual ESM/CJS output
Switch from plain tsc to tsup bundler to fix Node.js runtime errors
caused by extensionless ESM imports. The package now outputs both
CommonJS (for apps/worker) and ESM (for apps/web via Vite).

Also fixes system data views comment count (29 → 30).

--- a/packages/schema-inferrer/package.json
+++ b/packages/schema-inferrer/package.json
@@ -2,10 +2,18 @@
   "name": "@qpp/schema-inferrer",
   "version": "0.0.0",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "files": ["dist"],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --format esm,cjs --dts --clean --external node-sql-parser",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "vitest run"
@@ -17,6 +25,7 @@
     "@qpp/eslint-config": "workspace:^",
     "eslint": "^9.39.2",
     "node-sql-parser": "^5.4.0",
+    "tsup": "^8.0.0",
     "typescript": "^5.3.3",
     "vitest": "^3.2.4"
   }
