chore(ci): consolidate test coverage workflow and add changed-file threshold
- Combine unit, integration, and e2e tests into single coverage run
- Fix nyc merge to use separate temp directory (avoid report collisions)
- Add check-changed-coverage.js script to enforce 90% threshold on changed files
- Update pr-review skill to require coverage check on changed source files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,8 +115,8 @@ jobs:
       - name: Run migrations
         run: pnpm db:migrate
 
-      - name: Unit & integration tests with coverage
-        run: pnpm test:coverage
+      - name: Unit, integration & e2e tests with coverage
+        run: pnpm test:coverage:all
 
       - name: Upload coverage artifacts
         if: always()
@@ -127,9 +127,6 @@ jobs:
             coverage/coverage-summary.json
             coverage/coverage-final.json
           retention-days: 7
-
-      - name: E2E tests
-        run: pnpm test:e2e
 
   coverage-report:
     needs: check
