fix(schema-inferrer): ESM interop for node-sql-parser

--- a/packages/schema-inferrer/tsconfig.json
+++ b/packages/schema-inferrer/tsconfig.json
@@ -6,6 +6,7 @@
     "declaration": true,
     "outDir": "./dist",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
