--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@solar-icons/react": "^1.0.1",
     "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.24.12",
