chore: add test data purge, idle transaction timeout, and coverage exclusions
Add globalSetup for e2e/integration tests that purges orphaned test
tenants before and after runs. Configure PostgreSQL with a 30s
idle_in_transaction_session_timeout to prevent leaked connections.
Exclude stub files from coverage checks. Add tunnel:dev:http2 script.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web:dev": "pnpm --filter @qpp/web dev",
     "web:dev:preview": "pnpm --filter @qpp/web dev:preview",
     "tunnel:dev": "concurrently \"pnpm dev\" \"cloudflared tunnel run queryplusplus-dev\"",
+    "tunnel:dev:http2": "concurrently \"pnpm dev\" \"cloudflared tunnel run --protocol http2 queryplusplus-dev\"",
     "pretest": "pnpm -r --filter \"./packages/**\" build",
     "test": "pnpm -r test",
     "test:api": "pnpm -r --filter \"./packages/**\" build && pnpm --filter api test",
