--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     image: postgres:16
     ports:
       - "5432:5432"
+    command: ["postgres", "-c", "idle_in_transaction_session_timeout=30s"]
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
