feat: query execution history with on-demand SQL retrieval (#41)
* feat(06-02): create StatusBadge CVA component

- 6 CVA variants: success, failed, canceled, running, queued, default
- Animated pulse dot indicator for running state
- runStatusToVariant() helper for mapping run status strings

* feat(06-01): add execution history columns and migration 0014

- Add sql_text_encrypted, row_count, saved_query_id to shell_query_runs
- Drop unused query_history table
- Remove dead queryHistory references from integration and e2e tests
- Migration generated via drizzle-kit generate --custom and applied

* feat(06-03): add Activity Bar store and component

- Zustand store with activeView state and toggleView action
- ActivityBar with 3 icons: Data Extensions, Queries, History
- Radix tooltips on each icon, active indicator with left border
- Bold/Linear weight toggle for active/inactive state

* feat(06-02): create DataTable component suite with TanStack Table

- Generic DataTable<TData> with server-side pagination and sorting
- DataTableColumnHeader with sort toggle using Solar icons
- DataTablePagination with first/prev/next/last controls
- DataTableToolbar with debounced search input and filter slot
- Barrel index.ts exporting all components and types
- Install @tanstack/react-table dependency

* feat(06-01): add execution history types and feature key

- Add executionHistory to FeatureKeySchema enum (Pro/Enterprise only)
- Create ExecutionHistoryItemSchema, HistoryListResponseSchema, HistoryQueryParamsSchema
- Export all types and schemas from shared-types index

* feat(06-01): add execution history types and feature key

- Add executionHistory to FeatureKeySchema enum (Pro/Enterprise only)
- Create ExecutionHistoryItemSchema, HistoryListResponseSchema, HistoryQueryParamsSchema
- Export all types and schemas from shared-types index
- Update features service test expectations for new feature key

* feat(api,worker): persist SQL text in createRun and row count on completi

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,11 +22,13 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@solar-icons/react": "^1.0.1",
     "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.24.12",
