feat(db): add audit retention purge script
Standalone DML-only script that deletes expired audit rows in batches,
using per-tenant retention windows via app.audit_retention_purge session
flag. Intended to run under a privileged maintenance role.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typecheck": "pnpm -r typecheck",
     "db:generate": "pnpm --filter @qpp/database db:generate",
     "db:migrate": "pnpm --filter @qpp/database db:migrate",
+    "db:audit-retention": "pnpm --filter @qpp/database db:audit-retention",
     "prepare": "husky"
   },
   "lint-staged": {
