--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,7 +14,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "vitest run",
-    "test:integration": "vitest run --config ./vitest-integration.config.ts"
+    "test:integration": "vitest run --config ./vitest-integration.config.ts",
+    "db:audit-retention": "ts-node src/audit-retention.ts"
   },
   "dependencies": {
     "@qpp/shared-types": "workspace:^",
