--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,28 +31,33 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
+    "@nestjs/terminus": "^11.0.0",
     "@qpp/backend-shared": "workspace:^",
     "@qpp/database": "workspace:^",
     "@qpp/shared-types": "workspace:^",
+    "@sentry/nestjs": "^10.38.0",
     "axios": "^1.6.7",
     "bullmq": "^5.66.4",
+    "bullmq-otel": "^1.2.0",
     "cache-manager": "^7.2.7",
     "dotenv": "^16.4.5",
     "fastify": "^5.6.2",
     "ioredis": "^5.9.0",
     "jose": "^6.1.3",
     "nestjs-pino": "^4.5.0",
+    "pino-loki": "^3.0.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@qpp/test-utils": "workspace:^",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@qpp/test-utils": "workspace:^",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
