--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@sentry/react": "^10.38.0",
     "@solar-icons/react": "^1.0.1",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-table": "^8.21.3",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@qpp/eslint-config": "workspace:*",
+    "@sentry/vite-plugin": "^4.9.1",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
