--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "nest build",
     "start": "node dist/main.js",
-    "start:dev": "DOTENV_CONFIG_PATH=../../.env nest start --watch",
+    "start:dev": "DOTENV_CONFIG_PATH=../../.env node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "vitest run",
