fix(observability): guard metrics and scrub jwt urls

--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,8 @@ COOKIE_SAMESITE=lax
 # Metrics (optional)
 # =============================================================================
 # When set, the /metrics endpoint requires Authorization: Bearer <key>.
-# Leave unset for local dev or when metrics are protected at the infra level.
+# Leave unset for local dev. In production, set this or ensure /metrics is only
+# reachable via infra-level protection (ingress auth, network policy, etc.).
 # METRICS_API_KEY=
 
 # Worker Admin API Key (required for Bull Board UI access at /admin/queues)
