feat: observability and monitoring (#51) (#51)
* chore(10-01): install Phase 10 deps, create instrument.ts, add observability env vars

- Install @sentry/nestjs, @nestjs/terminus, bullmq-otel, prom-client, pino-loki (backend)
- Install @sentry/react, @sentry/vite-plugin (frontend)
- Create apps/api/src/instrument.ts with Sentry.init, header scrubbing, transaction filtering
- Create apps/worker/src/instrument.ts with Sentry.init and transaction filtering
- Add observabilitySchema (SENTRY_DSN, SENTRY_ENVIRONMENT, LOKI_HOST/USERNAME/PASSWORD) to env.schema.ts
- Merge observabilitySchema into both apiEnvSchema and workerEnvSchema
- Increase app.module unit test timeouts to 15s (heavier dep tree from OTel packages)

* feat(10-01): wire Sentry into NestJS modules, upgrade GlobalExceptionFilter

- Add import './instrument' as first line in both main.ts files (OTel monkey-patching)
- Register SentryModule.forRoot() as first import in both AppModules
- Replace mock Sentry stub with @SentryExceptionCaptured() decorator
- Remove manual Sentry.captureException call (decorator handles it, avoids duplicates)
- Separate type imports for ArgumentsHost (TS isolatedModules + emitDecoratorMetadata)

* feat(web): add Sentry browser SDK with ErrorBoundary crash handling

- Create instrument.ts with Sentry.init, browserTracingIntegration, and env-aware trace sampling
- Wire instrument import as first line in main.tsx for early fetch/XHR instrumentation
- Wrap authenticated AppShell content with Sentry.ErrorBoundary for React rendering error capture
- Install @sentry/react and @sentry/vite-plugin dependencies
- Graceful no-op when VITE_SENTRY_DSN is not set (dev environments)

* docs(10-01): complete Sentry error tracking and distributed tracing plan

- Created 10-01-SUMMARY.md with full execution details
- Updated STATE.md with Phase 10 progress, decisions, and session context

* feat(web): configure Sentry Vite plugin for source map upload

- Add sentryVitePlugin to Vite plugins array (

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,17 @@ DATABASE_URL_MIGRATIONS=postgres://qs_migrate:change_me_dev_only@127.0.0.1:5432/
 REDIS_URL=redis://localhost:6379
 
 # =============================================================================
+# Sentry (optional)
+# =============================================================================
+# You can use a single project DSN for all services with SENTRY_DSN, or split
+# per-service using SENTRY_DSN_API and SENTRY_DSN_WORKER.
+# Frontend (Vite) uses VITE_SENTRY_DSN (configure in apps/web/.env.local).
+# SENTRY_ENVIRONMENT=local
+# SENTRY_DSN=
+# SENTRY_DSN_API=
+# SENTRY_DSN_WORKER=
+
+# =============================================================================
 # Session & Encryption (REQUIRED)
 # =============================================================================
 # Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
@@ -57,6 +68,14 @@ COOKIE_SAMESITE=lax
 # COOKIE_DOMAIN=
 # Optional: Enable partitioned cookies (defaults to true when COOKIE_SAMESITE=none)
 # COOKIE_PARTITIONED=true
+
+# =============================================================================
+# Metrics (optional)
+# =============================================================================
+# When set, the /metrics endpoint requires Authorization: Bearer <key>.
+# Leave unset for local dev. In production, set this or ensure /metrics is only
+# reachable via infra-level protection (ingress auth, network policy, etc.).
+# METRICS_API_KEY=
 
 # Worker Admin API Key (required for Bull Board UI access at /admin/queues)
 # Set a strong random key in production. Access Bull Board with header: x-admin-key: <your-key>
