--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "nest build",
     "start": "node dist/main.js",
-    "start:dev": "DOTENV_CONFIG_PATH=../../.env nest start --watch",
+    "start:dev": "DOTENV_CONFIG_PATH=../../.env node -r dotenv/config ./node_modules/@nestjs/cli/bin/nest.js start --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "vitest run",
@@ -25,16 +25,20 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/schedule": "^6.1.0",
+    "@nestjs/terminus": "^11.0.0",
     "@qpp/backend-shared": "workspace:^",
     "@qpp/database": "workspace:^",
     "@qpp/schema-inferrer": "workspace:^",
     "@qpp/shared-types": "workspace:^",
+    "@sentry/nestjs": "^10.38.0",
     "bullmq": "^5.66.4",
+    "bullmq-otel": "^1.2.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.6.2",
     "ioredis": "^5.9.0",
     "nestjs-pino": "^4.5.0",
     "node-sql-parser": "^5.4.0",
+    "pino-loki": "^3.0.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
