feat(api): configure global rate limiting with session-based tracking
- Install @nestjs/throttler and @nest-lab/throttler-storage-redis
- Create SessionThrottlerGuard extending ThrottlerGuard with session userId tracking
- Register ThrottlerModule.forRootAsync with Redis storage in AppModule
- Set 120 req/min per session (10000 in test env to avoid interference)
- Register SessionThrottlerGuard as APP_GUARD for global enforcement
- Add @SkipThrottle() to health, metrics, and auth controllers
- Add 429 RFC 9457 test to GlobalExceptionFilter unit tests
- Add 5 unit tests for SessionThrottlerGuard getTracker logic

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,6 +24,7 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/secure-session": "^8.3.0",
     "@fastify/static": "^9.0.0",
+    "@nest-lab/throttler-storage-redis": "^1.2.0",
     "@nestjs/bullmq": "^11.0.4",
     "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
@@ -32,6 +33,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@qpp/backend-shared": "workspace:^",
     "@qpp/database": "workspace:^",
     "@qpp/shared-types": "workspace:^",
