--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sonner": "^2.0.7",
+    "sql-formatter": "^15.7.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
